# MonthlySubscriptionSolana

./: .gitignore  .prettierignore  Anchor.toml  Cargo.toml  README.md
.github/workflows/: ci.yml
monthly_subscription_solana/: Cargo.toml
monthly_subscription_solana/src/: errors.rs  lib.rs
monthly_subscription_solana/src/instructions/: create.rs  delete.rs  renew.rs  suscribe.rs  use_sus.rs
monthly_subscription_solana/src/state/: accounts.rs
programs/monthly_subscription_solana/: Cargo.toml
programs/monthly_subscription_solana/src/: lib.rs
programs/monthly_subscription_solana/src/errors/: errors.rs
programs/monthly_subscription_solana/src/instructions/: create.rs  delete.rs  mod.rs  renew.rs  suscribe.rs  use_sus.rs  validations.rs
programs/monthly_subscription_solana/src/state/: accounts.rs
programs/monthly_subscription_solana/src/utils/: util.rs  utils.rs
src/: main.rs
src/functions/: delete.rs
test_in_rust/: main.rs
test_in_rust/functions/: create.rs  mod.rs  renew.rs  suscribe.rs  use_sus.rs
tests/: Accounts.ts  Create.ts  Delete.ts  Suscribe.ts  close.ts  create.ts  monthly_subscription_solana.ts  renew.ts  suscribe.ts  use.ts
