[package]
name = "monthly_subscription_solana"
version = "0.1.0"
description = "A monthly subscription in Solana"
edition = "2021"
authors = ["Mateo Lafalce <mateo.lafalce04@gmail.com>"]

[lib]
crate-type = ["cdylib", "lib"]
name = "monthly_subscription_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
