[package]
name = "monthly_subscription_solana"
version = "1.0.1"
description = "suscription app"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "monthly_subscription_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
